--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,8 @@
+<%- content_for( :home_active ) { "active" } %>
+<%- content_for( :header_title ) { "Vink" } %>
+<%- content_for( :footer ) {  } %>
+<%- content_for( :header_menu_left ) { } %>
+<%- content_for( :header_menu_rught ) { } %>
+
 <h1>Home#index</h1>
 <p>Find me in app/views/home/index.html.erb</p>
