--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,7 @@
     <%= action_cable_meta_tag %>
     <%= yield :stylesheets %>
     <link rel="manifest" href="/manifest.json">
+    <script src="https://rawgit.com/schmich/instascan-builds/master/instascan.min.js"></script>
   </head>
 
   <body class="has-navbar-fixed-top has-navbar-fixed-bottom">
