--- a/app/views/service_worker/manifest.json.erb
+++ b/app/views/service_worker/manifest.json.erb
@@ -1,6 +1,6 @@
 {
-  "short_name": "Proposito",
-  "name": "Proposito",
+  "short_name": "Vink",
+  "name": "Vink",
   "icons": [
     {
       "src": "<%= asset_path('192x192.png') %>",
