--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,10 +47,10 @@
 
       <%= yield %>
     </main>
-    <footer>
-      <div class="columns is-mobile">
+    <footer class="has-background-light">
+      <div class="columns is-gapless is-mobile">
         <div class="column is-centered">
-          <p class="has-background-white-bis	">
+          <p class="has-background-light">
             <%= link_to root_path, class: "link" do %>
               <span class="icon is-large">
                 <i class="fas fa-3x fa-home"></i>
@@ -59,7 +59,7 @@
           </p>
         </div>
         <div class="column is-centered">
-          <p class="has-background-white-bis	">
+          <p class="has-background-light">
             <%= link_to root_path, class: "link" do %>
               <span class="icon is-large">
                 <i class="fas fa-3x fa-home"></i>
@@ -68,7 +68,7 @@
           </p>
         </div>
         <div class="column is-centered">
-          <p class="has-background-white-bis	">
+          <p class="has-background-light">
             <%= link_to root_path, class: "link" do %>
               <span class="icon is-large">
                 <i class="fas fa-3x fa-home"></i>
@@ -77,7 +77,7 @@
           </p>
         </div>
         <div class="column is-centered">
-          <p class="has-background-white-bis	">
+          <p class="has-background-light">
             <%= link_to root_path, class: "link" do %>
               <span class="icon is-large">
                 <i class="fas fa-3x fa-home"></i>
