--- a/app/assets/stylesheets/_layout.scss
+++ b/app/assets/stylesheets/_layout.scss
@@ -1,14 +1,20 @@
 
+
 footer {
   bottom: 0;
   left: 0;
   position: fixed;
   right: 0;
   z-index: 30;
+  a {
+    color: #666;
+  }
 }
 
 .link {
   display: flex;
   justify-content: center;
   align-items: center;
+  color: #666;
 }
+
