--- a/app/assets/stylesheets/sass/utilities/initial-variables.sass
+++ b/app/assets/stylesheets/sass/utilities/initial-variables.sass
@@ -25,7 +25,7 @@ $red:          hsl(3, 79%, 49%) !default
 
 // Typography
 
-$family-sans-serif: BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif !default
+$family-sans-serif: Source Sans Pro, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif !default
 $family-monospace: monospace !default
 $render-mode: optimizeLegibility !default
 
