--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-<%- content_for( :home_selected ) { "selected" } %>
+<%- content_for( :categories_selected ) { "selected" } %>
 <%- content_for( :footer ) {  } %>
 <%- content_for( :header_menu_left ) { } %>
 <%- content_for( :header_menu_rught ) { } %>
