--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -71,7 +71,7 @@
         </div>
         <div class="column is-centered">
           <p class="has-background-light">
-            <%= link_to root_path, class: "link" do %>
+            <%= link_to home_messages_path, class: "link" do %>
               <span class="icon is-large">
                 <i class="fas fa-3x fa-home"></i>
               </span>
