--- a/app/views/home/messages.html.erb
+++ b/app/views/home/messages.html.erb
@@ -30,10 +30,26 @@ function notifyMe() {
 }
 
 function notifyMeWithAvatar(title) {
-  var img = 'https://gsvink.herokuapp.com/192x192.png';
-  var text = 'HEY! Your task "' + title + '" is now overdue.';
-  var notification = new Notification('To do list', { body: text, icon: img });
+  //var img = 'https://gsvink.herokuapp.com/192x192.png';
+  //var text = 'HEY! Your task "' + title + '" is now overdue.';
+  //var notification = new Notification('To do list', { body: text, icon: img });
+
+  if (Notification.permission == 'granted') {
+    navigator.serviceWorker.getRegistration().then(function(reg) {
+      var options = {
+        body: 'Here is a notification ' + title + ' body !',
+        icon: 'https://gsvink.herokuapp.com/192x192.png',
+        vibrate: [100, 50, 100],
+        data: {
+          dateOfArrival: Date.now(),
+          primaryKey: 1
+        }
+      };
+      reg.showNotification('Hello world!', options);
+    });
+  }
 }
+
 notifyMe()
 notifyMeWithAvatar("Roger que paso")
 
