Open url when scann a QR

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -78,6 +78,15 @@
             <% end %>
           </p>
         </div>
+        <div class="column is-centered">
+          <p class="has-background-light">
+            <%= link_to scanner_index_path, class: "link" do %>
+              <span class="icon is-large">
+                <i class="fa fa-shopping-basket fa-3x"></i>
+              </span>
+            <% end %>
+          </p>
+        </div>
       </div>
     </footer>
   </body>
