--- a/app/views/scanner/index.html.erb
+++ b/app/views/scanner/index.html.erb
@@ -2,7 +2,7 @@
 <script type="text/javascript">
     var scanner = new Instascan.Scanner({ video: document.getElementById('preview') });
     scanner.addListener('scan', function (content) {
-      window.open(content);
+      location.replace(content);
     });
     Instascan.Camera.getCameras().then(function (cameras) {
       if (cameras.length > 0) {
