--- a/app/views/scanner/index.html.erb
+++ b/app/views/scanner/index.html.erb
@@ -1,3 +1,4 @@
+<script src="https://rawgit.com/schmich/instascan-builds/master/instascan.min.js"></script>
 <video id="preview" width="100%" height="100%"></video>
 <script type="text/javascript">
     var scanner = new Instascan.Scanner({ video: document.getElementById('preview') });
