Stop camera form others view

--- a/app/views/home/products.html.erb
+++ b/app/views/home/products.html.erb
@@ -1,2 +1,5 @@
 <h1>Home#products</h1>
 <p>Find me in app/views/home/products.html.erb</p>
+<script type="text/javascript">
+  stopCamera()
+</script>
