--- a/app/views/home/appointments.html.erb
+++ b/app/views/home/appointments.html.erb
@@ -1,2 +1,5 @@
 <h1>Home#appointments</h1>
-<p>Find me in app/views/home/appointments.html.erb</p>
+<p>Find me in app/views/home/appointments.html.erb</p>}
+<script type="text/javascript">
+  stopCamera()
+</script>
