--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,7 @@
     <%= action_cable_meta_tag %>
     <%= yield :stylesheets %>
     <link rel="manifest" href="/manifest.json">
+    <script src="https://rawgit.com/schmich/instascan-builds/master/instascan.min.js"></script>
   </head>
 
   <body class="has-navbar-fixed-top has-navbar-fixed-bottom">
@@ -88,5 +89,21 @@
         </div>
       </div>
     </footer>
+    <script type="text/javascript">
+        function stopCamera(){
+          Instascan.Camera.getCameras().then(function (cameras) {
+            if (cameras.length > 0) {
+              if(scanner){
+                scanner.stop(cameras[1])
+              }
+            } else {
+              alert('No se puede acceder a la camara trasera del movil');
+            }
+          }).catch(function (e) {
+            console.error(e);
+          });
+        }
+        stopCamera()
+    </script>
   </body>
 </html>
