--- a/app/views/scanner/index.html.erb
+++ b/app/views/scanner/index.html.erb
@@ -6,7 +6,8 @@
     });
     Instascan.Camera.getCameras().then(function (cameras) {
       if (cameras.length > 0) {
-        scanner.start(cameras[1])
+        scanner.stop(cameras[0])
+        scanner.start(cameras[0])
       } else {
         alert('No se puede acceder a la camara trasera del movil');
       }
