--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,4 +1,9 @@
 <h1>Detalle de producto</h1>
+<%= image_tag("192x192.png") %>
+<br>
+<%= link_to "Agendar cita", new_appoitment_path, class: "button is-danger"%>
+<%= link_to "Lo quiero", "#", class: "button is-danger"%>
+<br>
 <% @product.each do |detail|  %>
   <% detail.reverse_each do |key, value| %>
       <% if value.is_a?(String) && value != '' %>
