--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -89,5 +89,8 @@
         </div>
       </div>
     </footer>
+    <script>
+      window.vapidPublicKey = new Uint8Array(<%= @decodedVapidPublicKey %>);
+    </script>
   </body>
 </html>
