--- a/app/views/service_worker/manifest.json.erb
+++ b/app/views/service_worker/manifest.json.erb
@@ -3,12 +3,12 @@
   "name": "vink-client",
   "icons": [
     {
-      "src": "<%= asset_path('192x192.png') %>",
+      "src": "<%= asset_path('192x192.jpg') %>",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "<%= asset_path('512x512.png') %>",
+      "src": "<%= asset_path('512x512.jpg') %>",
       "type": "image/png",
       "sizes": "512x512"
     }
