--- a/app/views/service_worker/manifest.json.erb
+++ b/app/views/service_worker/manifest.json.erb
@@ -1,6 +1,6 @@
 {
   "short_name": "Vink clientes",
-  "name": "vink-client",
+  "name": "Vink Client",
   "icons": [
     {
       "src": "<%= asset_path('192x192.jpg') %>",
