--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -19,7 +19,7 @@
         					<i class="fa fa-angle-down"></i>
         				</a>
         			</header>
-        			<div class="card-content is-hidden">
+        			<div class="card-content">
         				<div class="content">
                   <% subname['children'].each do |minimalname| %>
                     <li>
